Bug 148035 - Kopete does not dispplay Messages from ICQ6 Users, just empty space
Summary: Kopete does not dispplay Messages from ICQ6 Users, just empty space
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-07-19 22:15 UTC by Robin
Modified: 2007-11-11 15:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robin 2007-07-19 22:15:06 UTC
Version:           bewest (using KDE KDE 3.5.7DevelKDE 1.2)
Installed from:    Ubuntu PackagesUbuntu PackagesUbuntu Packages
Compiler:           I user Gnome and installed Kopete via Synaptics!!!!

When you chat with an ICQ 6 user, Kopete doesn't display the messagae only empty white spaces
Comment 1 Roman Jarosz 2007-07-20 10:15:40 UTC
Do you really have Kopete 0.12.6?

I only get empty messages if ICQ 6 request status and that's already fixed in Kopete 0.12.6. If you have 0.12.6 can you ask the person whom you received  empty message from, what he actually send you or what he was doing?

Thanks

Comment 2 Robin 2007-08-05 17:31:35 UTC
no I have 0.12.4 sorry
Comment 3 Robin 2007-08-05 17:39:15 UTC
But where du I get the latest version?
I'm using Ubuntu and installed kopete via synaptics
And on the Website the latest version is http://kopete.kde.org/releases.php 0.12.2


So how can I have 0.12.4 ?
Comment 4 Roman Jarosz 2007-08-05 19:12:47 UTC
Kopete 0.12.6 is part of KDE 3.5.7, the website isn't up to date.
Comment 5 morhekil 2007-09-18 10:14:17 UTC
Recently I've started to receive empty messages from some contacts while being in invisible mode. After asking them what's going on on their side it seems that their clients are doing some checks for invisibility trying to find the contact those are invisible and not allowed to see them. Other clients do not show these "test" messages, but Kopete shows them empty. I'm using 0.12.6 compiled from svn, rev 713910
Comment 6 Roman Jarosz 2007-11-11 13:06:00 UTC
Oleg sorry for late replay, but do you know by any chance which client did the other user use?
Comment 7 morhekil 2007-11-11 13:28:19 UTC
Roman, it was Miranda IM, http://www.miranda-im.com
Comment 8 Roman Jarosz 2007-11-11 15:49:54 UTC
SVN commit 735378 by rjarosz:

Filter out Miranda's invisible check.

BUG: 148035



 M  +4 -0      client.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=735378
Comment 9 Roman Jarosz 2007-11-11 15:50:44 UTC
SVN commit 735379 by rjarosz:

Backport: Filter out Miranda's invisible check.

CCBUG: 148035



 M  +4 -0      client.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=735379