Filter out Miranda's invisible check.

BUG: 148035


svn path=/trunk/KDE/kdenetwork/kopete/; revision=735378